# devpocketbot

./: .gitignore  main.py  pyproject.toml
src/: __main__.py  config.py
src/server/: app.py  routers.py
